echoserv with I/O multiplexing

--- a/Echoserv/CMakeLists.txt
+++ b/Echoserv/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required ( VERSION 3.10)
 
 project (Echoserv)
 
-add_executable(echoserv echoserv.c helper.c)
+add_executable(echoserv activeblock.cc echoserv.cc helper.cc)
 
-add_executable(echoclnt echoclnt.c helper.c)
+add_executable(echoclnt echoclnt.cc helper.cc)
