a threadpool with fix num of threads

--- a/Echoserv/CMakeLists.txt
+++ b/Echoserv/CMakeLists.txt
@@ -5,3 +5,4 @@ project (Echoserv)
 add_executable(echoserv activeblock.cc echoserv.cc helper.cc)
 
 add_executable(echoclnt echoclnt.cc helper.cc)
+add_executable(echoclntlc echoclntlc.cc helper.cc)
